add feedback func

--- a/JobPortal.WebApp/Areas/Admin/Views/Employer/Index.cshtml
+++ b/JobPortal.WebApp/Areas/Admin/Views/Employer/Index.cshtml
@@ -93,19 +93,15 @@
                                         <th>Contact</th>
                                         <th>Location</th>
                                         <th>WebsiteURL</th>
-                                        @*<th></th>*@
                                     </tr>
                                     <tr class="targetfields">
                                         <td>
                                             <img src="https://localhost:7211/images/employers/@emp.UrlAvatar" alt="@emp.FullName" style="width: 100px;">
                                         </td>
-                                        <td>@emp.Description</td>
+                                        <td>@Html.Raw(emp.Description)</td>
                                         <td>@emp.Contact</td>
                                         <td>@emp.Location</td>
                                         <td>@emp.WebsiteURL</td>
-                                        @*<td>
-                                            <img src="https://localhost:7211/images/cvs/@CV.CVImage" alt="cv image" style="width: 100px;">
-                                        </td>*@
                                     </tr>
                                 }
                             </tbody>
@@ -124,14 +120,15 @@
             //Fixing jQuery Click Events for the iPad
             var ua = navigator.userAgent,
                 event = (ua.match(/iPad/i)) ? "touchstart" : "click";
-            if ($('.table').length > 0) {
-                $('.table .header').on(event, function () {
-                    $(this).toggleClass("active", "").nextUntil('.header').css('display', function (i, v) {
-                        return this.style.display === 'table-row' ? 'none' : 'table-row';
-                    });
+            $('.table').on(event, '.header', function () {
+                $(this).toggleClass("active", "").nextUntil('.header').css('display', function (i, v) {
+                    return this.style.display === 'table-row' ? 'none' : 'table-row';
                 });
-            }
-        })
+            });
+            $('.table').on(event, '.header td:not(:last-child)', function (e) {
+                e.stopPropagation();
+            });
+        });
     </script>
 
     <script>
