--- a/JobPortal.WebApp/Views/Employer/Register.cshtml
+++ b/JobPortal.WebApp/Views/Employer/Register.cshtml
@@ -143,5 +143,5 @@
         }
     </script>
 
-    @*<script>CKEDITOR.replace('CKEditor');</script>*@
+    <script>CKEDITOR.replace('CKEditor');</script>
 }
