--- a/JobPortal.WebApp/Views/Shared/_SidebarPartial.cshtml
+++ b/JobPortal.WebApp/Views/Shared/_SidebarPartial.cshtml
@@ -30,7 +30,7 @@
                     <br />
                     <a href="/job/@job.Slug"><h4 class="text-center">@job.Name</h4></a>
                     <h6>@job.Province.Name</h6>
-                    <p>@job.Description</p>
+                    <p>@Html.Raw(job.Description)</p>
                     <h5>Job Nature: @job.Time.Name</h5>
                     <p class="address"><span class="lnr lnr-map"></span> @job.Title.Name</p>
                     <p class="address"><span class="lnr lnr-database"></span> @job.MinSalary - @job.MaxSalary</p>
