--- a/JobPortal.WebApp/Areas/Admin/Views/Skill/Update.cshtml
+++ b/JobPortal.WebApp/Areas/Admin/Views/Skill/Update.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Update skill";
 }
 
+<!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
@@ -51,7 +52,7 @@
                                     <span asp-validation-for="Name" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <img id="blah" src="https://localhost:7211/images/skills/@Model.Logo" alt="your logo" style="width: 390px;" />
+                                    <img id="blah" src="https://localhost:7211/images/skills/@Model.Logo" alt="your logo" style="width: 350px;" />
                                     <a class="btn btn-primary" href="#" data-toggle="modal" data-target="#exampleModal">Change logo</a>
                                 </div>
                                 <br />
