--- a/JobPortal.WebApp/Views/Employer/Register.cshtml
+++ b/JobPortal.WebApp/Views/Employer/Register.cshtml
@@ -55,7 +55,7 @@
                                             <label asp-for="UrlAvatar" class="control-label"></label><span class="text-danger">*</span>
                                             <input type="file" asp-for="UrlAvatar" class="form-control" accept="image/*" id="imgInp" />
                                             <span asp-validation-for="UrlAvatar" class="text-danger"></span>
-                                            <img id="blah" src="#" alt="your logo image" style="width: 335px;" />
+                                            <img id="blah" src="#" alt="your logo" style="width: 335px;" />
                                         </div>
                                         <div class="form-group">
                                             <label asp-for="Location" class="control-label"></label><span class="text-danger">*</span>
