--- a/JobPortal.WebApp/Areas/Admin/Views/Title/Index.cshtml
+++ b/JobPortal.WebApp/Areas/Admin/Views/Title/Index.cshtml
@@ -1,4 +1,7 @@
 ﻿@model IEnumerable<JobPortal.Data.Entities.Title>
+@using X.PagedList;
+@using X.PagedList.Mvc.Core;
+@using X.PagedList.Web.Common;
 
 @{
     ViewData["Title"] = "Title";
@@ -9,7 +12,6 @@
         <div class="col-lg-12 grid-margin stretch-card">
             <h1 style="text-align:center">Table of Title</h1>
             <div class="card">
-
                 <div class="card-body">
                     <p class="card-description">
                         <a class="btn btn-primary" href="/admin/title/create">Add new title</a>
@@ -35,20 +37,20 @@
                                 });
                             </script>
                         }
-                            <div class="table-responsive ">
-                                <table class="table table-bordered">
-                                    <thead>
-                                        <tr>
-                                            <th>
-                                                <input type="checkbox" id="checkall" />
-                                            </th>
-                                            <th>
-                                                @Html.DisplayNameFor(model => model.Name)
-                                            </th>
-                                            <th>Actions</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
+                        <div class="table-responsive ">
+                            <table class="table table-bordered">
+                                <thead>
+                                    <tr>
+                                        <th>
+                                            <input type="checkbox" id="checkall" />
+                                        </th>
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.Name)
+                                        </th>
+                                        <th>Actions</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
                                     @foreach (var title in Model)
                                     {
                                         <tr>
@@ -77,6 +79,25 @@
                                     }
                                 </tbody>
                             </table>
+                        </div>
+                        <!--Page list-->
+                        <div class="text-center">
+                            <ul class="pagination">
+                                @Html.PagedListPager((IPagedList)Model, page =>
+                                Url.Action("Index", new { page }),
+                                new PagedListRenderOptions
+                                {
+                                Display = PagedListDisplayMode.IfNeeded,
+                                LiElementClasses = new string[] { "page-item" },
+                                UlElementClasses = new string[] { "pagination" },
+                                PageClasses = new string[] { "page-link" },
+                                MaximumPageNumbersToDisplay = 7, // Maximum number of pages displayed
+                                LinkToPreviousPageFormat = "<span aria-hidden=\"true\">&lsaquo;</span>",
+                                LinkToNextPageFormat = "<span aria-hidden=\"true\">&rsaquo;</span>",
+                                LinkToFirstPageFormat = "<span aria-hidden=\"true\">&lsaquo;&lsaquo;</span>",
+                                LinkToLastPageFormat = "<span aria-hidden=\"true\">&rsaquo;&rsaquo;</span>"
+                                })
+                            </ul>
                         </div>
                     </form>
                 </div>
@@ -119,6 +140,32 @@
             background: transparent;
             color: #dc3545;
         }
+
+    .pagination {
+        list-style-type: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 20px;
+    }
+
+        .pagination li {
+            margin: 0 5px;
+        }
+
+            .pagination li a {
+                display: inline-block;
+                padding: 5px 10px;
+                border: 1px solid #ccc;
+                color: #333;
+                text-decoration: none;
+                border-radius: 5px;
+            }
+
+            .pagination li.active a {
+                background-color: #333;
+                color: #fff;
+            }
 </style>
 
 <script>
