--- a/JobPortal.WebApp/Areas/Employer/Views/Apply/Index.cshtml
+++ b/JobPortal.WebApp/Areas/Employer/Views/Apply/Index.cshtml
@@ -1,4 +1,7 @@
 ﻿@model IEnumerable<JobPortal.Data.ViewModel.CVsViewModel>
+@using X.PagedList;
+@using X.PagedList.Mvc.Core;
+@using X.PagedList.Web.Common;
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.Http
 @inject SignInManager<AppUser> signInManager
@@ -172,6 +175,32 @@
             .modal-body .form-group div:not(:last-child) {
                 margin-bottom: 0.5rem;
             }
+
+        .pagination {
+            list-style-type: none;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-top: 20px;
+        }
+
+            .pagination li {
+                margin: 0 5px;
+            }
+
+                .pagination li a {
+                    display: inline-block;
+                    padding: 5px 10px;
+                    border: 1px solid #ccc;
+                    color: #333;
+                    text-decoration: none;
+                    border-radius: 5px;
+                }
+
+                .pagination li.active a {
+                    background-color: #333;
+                    color: #fff;
+                }
     </style>
 </head>
 
@@ -408,6 +437,25 @@
                                 }
                             </tbody>
                         </table>
+                    </div>
+                    <!--Page list-->
+                    <div class="text-center">
+                        <ul class="pagination">
+                            @Html.PagedListPager((IPagedList)Model, page =>
+                            Url.Action("Index", new { page }),
+                            new PagedListRenderOptions
+                            {
+                            Display = PagedListDisplayMode.IfNeeded,
+                            LiElementClasses = new string[] { "page-item" },
+                            UlElementClasses = new string[] { "pagination" },
+                            PageClasses = new string[] { "page-link" },
+                            MaximumPageNumbersToDisplay = 7, // Maximum number of pages displayed
+                            LinkToPreviousPageFormat = "<span aria-hidden=\"true\">&lsaquo;</span>",
+                            LinkToNextPageFormat = "<span aria-hidden=\"true\">&rsaquo;</span>",
+                            LinkToFirstPageFormat = "<span aria-hidden=\"true\">&lsaquo;&lsaquo;</span>",
+                            LinkToLastPageFormat = "<span aria-hidden=\"true\">&rsaquo;&rsaquo;</span>"
+                            })
+                        </ul>
                     </div>
                 </div>
             </div>
