--- a/JobPortal.WebApp/Views/Shared/_LayoutAccount.cshtml
+++ b/JobPortal.WebApp/Views/Shared/_LayoutAccount.cshtml
@@ -23,7 +23,7 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
 
-    <title>Login Basic - Pages | Sneat - Bootstrap 5 HTML Admin Template - Pro</title>
+    <title>Login User</title>
 
     <meta name="description" content="" />
 
