--- a/JobPortal.WebApp/Views/Search/Index.cshtml
+++ b/JobPortal.WebApp/Views/Search/Index.cshtml
@@ -113,7 +113,7 @@
                             <p>@Html.Raw(job.Introduce)</p>
                             <h5>Job Nature: @job.Time.Name</h5>
                             <p class="address"><span class="lnr lnr-map"></span> @job.Title.Name</p>
-                            <p class="address"><span class="lnr lnr-database"></span> @job.MinSalary - @job.MaxSalary</p>
+                            <p class="address"><span class="lnr lnr-database"></span> $@job.MinSalary - $@job.MaxSalary</p>
                         </div>
                     </div>
                 }
