--- a/JobPortal.WebApp/Views/Shared/_SidebarPartial.cshtml
+++ b/JobPortal.WebApp/Views/Shared/_SidebarPartial.cshtml
@@ -39,7 +39,7 @@
                     <p>@Html.Raw(job.Introduce)</p>
                     <h5>Job Nature: @job.Time.Name</h5>
                     <p class="address"><span class="lnr lnr-map"></span> @job.Title.Name</p>
-                    <p class="address"><span class="lnr lnr-database"></span> @job.MinSalary - @job.MaxSalary</p>
+                    <p class="address"><span class="lnr lnr-database"></span> $@job.MinSalary - $@job.MaxSalary</p>
                     <a href="/job/@job.Slug" style="display: flex; justify-content: center;" class="btns text-uppercase">View job</a>
                 </div>
             }
